--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 .Main{background-color: rgba(1, 02, 0, 0.7);
   color: LightSlateGray ;
   padding: 40px;
-  height: 300px;
+  height: auto;
   width: 500px;
   margin: 100px auto;}
 
@@ -26,8 +26,8 @@ body {
  color: LightSlateGray ;
  padding: 40px;
  height: auto;
- width: 550px;
- margin: 100px auto;
+ width: 500px;
+ margin: 50px auto;
 }
 .skill{
   background-color: rgba(0, 0, 0, 0.7);
@@ -54,4 +54,88 @@ body {
    height: auto;
    width: 500px;
    margin: 100px auto;
+}
+
+
+/* Responsive Styles*/
+screen and (max-width:959px){
+  .Main{
+    width: 959px;
+
+  }
+  .object{
+      width: 959px;
+
+  }
+  .Acamdemic{
+    width: 959px
+
+  }
+  .skill{
+    width: 959px;
+
+
+  }
+  .personal{
+  width: 959px;
+  }
+  .Additional{
+    width: 959px;
+  }
+
+}
+
+
+
+
+
+screen and (max-width: 768px) {
+
+.Main{
+  width: 768px;
+  }
+.object{
+  width: 768px;
+}
+.Acamdemic{
+
+    width: 768px;
+}
+.skill{
+  width: 768px;
+}
+.personal{
+width: 768px;
+
+}
+.Additional{
+width: 768px;
+}
+
+}
+
+
+screen and (max-width: 320px) {
+
+.Main{
+  width: 200px;
+  }
+.object{
+    width: 200px;
+}
+.Acamdemic{
+
+    width: 200px;
+}
+.skill{
+    width: 200px;
+}
+.personal{
+  width: 200px;
+
+}
+.Additional{
+  width: 200px;
+}
+
 }
